--- a/package.json
+++ b/package.json
@@ -1,16 +1,11 @@
 {
     "name": "codestyle",
-    "version": "0.0.0",
+    "version": "1.0.1",
     "scripts": {
-        "ng": "ng",
-        "start": "ng serve",
-        "build": "ng build",
-        "test": "ng test",
-        "lint": "ng lint",
-        "e2e": "ng e2e",
         "manupdate": "rm -rvf node_modules && npm install",
         "reinstall": "rm -rvf npm-shrinkwrap.json && rm -rvf node_modules && npm install && npm dedupe && npm prune && npm shrinkwrap",
-        "fullupdate": "ncu -a && npm run reinstall"
+        "fullupdate": "ncu -a && npm run reinstall",
+        "check": "tslint --fix --project ./tsconfig.json && tsc"
     },
     "private": true,
     "dependencies": {
