--- a/package.json
+++ b/package.json
@@ -1,54 +1,29 @@
 {
     "name": "@labeg/code-style",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "scripts": {
         "manupdate": "rm -rvf node_modules && npm install",
-        "reinstall": "rm -rvf npm-shrinkwrap.json && rm -rvf node_modules && npm install && npm dedupe && npm prune && npm shrinkwrap",
+        "reinstall": "rm -rvf node_modules && npm install && npm dedupe && npm prune",
         "fullupdate": "ncu -a && npm run reinstall",
-        "check": "tslint --fix --project ./tsconfig.json && tsc"
+        "check": "tslint --fix --project ./tsconfig.json"
     },
     "repository": {
-      "type": "git",
-      "url": "git+https://github.com/LabEG/code-style.git"
+        "type": "git",
+        "url": "git+https://github.com/LabEG/code-style.git"
     },
     "author": "Labutin Evgeniy",
     "license": "MIT",
     "bugs": {
-      "url": "https://github.com/LabEG/code-style/issues"
+        "url": "https://github.com/LabEG/code-style/issues"
     },
     "homepage": "https://github.com/LabEG/code-style#readme",
     "dependencies": {
-        "alertify.js": "=1.0.12",
-        "class-validator": "=0.9.1",
-        "core-js": "=2.6.2",
-        "gridlex": "=2.7.1",
-        "ts-serializable": "=1.1.5",
-        "whatwg-fetch": "=3.0.0"
+        "codelyzer": "^4.5.0",
+        "tslint-eslint-rules": "^5.4.0"
     },
     "devDependencies": {
-        "@types/node": "=10.12.18",
-        "ts-node": "=7.0.1",
-        "tslint": "=5.12.1",
-        "typescript": "=3.2.2",
-        "gulp": "=3.9.1",
-        "gulp-clean": "=0.4.0",
-        "gulp-concat": "=2.6.1",
-        "gulp-cssbeautify": "=1.0.1",
-        "gulp-csscomb": "=3.0.8",
-        "gulp-csslint": "=1.0.1",
-        "gulp-notify": "=3.2.0",
-        "gulp-plumber": "=1.2.1",
-        "gulp-preprocess": "=3.0.1",
-        "gulp-rename": "=1.4.0",
-        "gulp-replace": "=1.0.0",
-        "gulp-sequence": "=1.0.0",
-        "gulp-size": "=3.0.0",
-        "gulp-tslint": "=8.1.3",
-        "gulp-uglify": "=3.0.1",
-        "gulp-util": "=3.0.8",
-        "gulp-wrap": "=0.14.0",
-        "require-dir": "=1.2.0",
-        "semver": "=5.6.0",
-        "tslib": "=1.9.3"
+        "tslint": "^5.12.1",
+        "typescript": "^3.2.4",
+        "tslib": "^1.9.3"
     }
 }
