--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
     "name": "@labeg/code-style",
-    "version": "1.0.7",
+    "version": "1.0.8",
     "scripts": {
         "manupdate": "rm -rvf node_modules && npm install",
         "reinstall": "rm -rvf node_modules && npm install && npm dedupe && npm prune",
-        "fullupdate": "ncu -a && npm run reinstall",
+        "fullupdate": "ncu -u && npm run reinstall",
         "check": "tslint --fix --project ./tsconfig.json"
     },
     "repository": {
@@ -21,8 +21,8 @@
         "tslint-eslint-rules": "^5.4.0"
     },
     "devDependencies": {
-        "tslint": "^5.12.1",
-        "typescript": "^3.2.4",
+        "tslint": "^5.16.0",
+        "typescript": "^3.4.5",
         "tslib": "^1.9.3"
     }
 }
