--- a/package.json
+++ b/package.json
@@ -42,15 +42,15 @@
     },
     "homepage": "https://github.com/LabEG/code-style#readme",
     "dependencies": {
-        "stylelint": "^13.7.1",
+        "@typescript-eslint/eslint-plugin": "^4.14.0",
+        "@typescript-eslint/parser": "^4.14.0",
+        "eslint": "^7.18.0",
+        "eslint-plugin-react": "^7.22.0",
+        "react": "^17.0.1",
+        "stylelint": "^13.9.0",
         "stylelint-config-standard": "^20.0.0",
-        "typescript": "^4.0.2",
-        "tslib": "^2.0.1",
-        "eslint": "^7.9.0",
-        "eslint-plugin-react": "^7.20.6",
-        "@typescript-eslint/eslint-plugin": "^4.1.1",
-        "@typescript-eslint/parser": "^4.1.1",
-        "react": "^16.13.1"
+        "tslib": "^2.1.0",
+        "typescript": "^4.1.3"
     },
     "devDependencies": {}
 }
