--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@typescript-eslint/parser": "^5.25.0",
         "eslint": "^8.15.0",
         "eslint-plugin-react": "^7.29.4",
+        "eslint-plugin-jsx-a11y": "^6.5.1",
         "react": "^18.1.0",
         "stylelint": "^14.8.2",
         "stylelint-config-standard": "^25.0.0",
