feat: separate eslint config to js and ts parts, add prettier config

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "@labeg/code-style",
-    "version": "3.0.9",
+    "version": "3.1.0",
+    "main": ".eslintrc.js",
     "scripts": {
         "prepublishOnly": "npm version patch"
     },
