feat: use @stylistic for formatting rules

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@labeg/code-style",
-    "version": "3.1.5",
+    "version": "4.0.0",
     "scripts": {
         "prepublishOnly": "npm version patch"
     },
@@ -21,5 +21,8 @@
         "eslint-plugin-jsx-a11y": "^6.8.0",
         "eslint-plugin-react": "^7.33.2",
         "eslint-plugin-react-hooks": "^4.6.0"
+    },
+    "devDependencies": {
+        "@stylistic/eslint-plugin": "^1.4.1"
     }
 }
