--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@labeg/code-style",
-    "version": "4.0.0",
+    "version": "4.0.1",
     "scripts": {
         "prepublishOnly": "npm version patch"
     },
@@ -20,9 +20,8 @@
         "eslint": "^8.55.0",
         "eslint-plugin-jsx-a11y": "^6.8.0",
         "eslint-plugin-react": "^7.33.2",
-        "eslint-plugin-react-hooks": "^4.6.0"
-    },
-    "devDependencies": {
-        "@stylistic/eslint-plugin": "^1.4.1"
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "@stylistic/eslint-plugin": "^1.4.1",
+        "@stylistic/eslint-plugin-migrate": "^1.4.1"
     }
 }
