--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -26,7 +26,7 @@ jobs:
           node-version: 22
           registry-url: https://registry.npmjs.org/
 
-      - run: npm ci
+      - run: npm ci --force
       - run: npm run release
       - run: git push --follow-tags origin master && npm publish --access public
         env:
