--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -31,7 +31,7 @@ jobs:
 
       - run: git config --global user.email "labeg@mail.ru"
       - run: git config --global user.name "Eugene Labutin"
-      - run: npm i --force # force because conflict typescript-eslint/parser version, check and remove later
+      - run: npm ci --force # force because conflict typescript-eslint/parser version, check and remove later
       - run: npm run release
       - run: git push --follow-tags origin master && npm publish --access public
         env:
