--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "url": "https://github.com/LabEG/code-style/issues"
     },
     "lint-staged": {
-        "./**/*.(ts|tsx|js|jsx)": [
+        "./tests/**/*.(ts|tsx|js|jsx)": [
             "eslint --fix -c .eslintrc.js --ext .tsx,.ts,.jsx,.js"
         ]
     },
