--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "author": "Eugene Labutin",
     "license": "MIT",
     "homepage": "https://github.com/LabEG/code-style#readme",
+    "description": "Code styles rules for difference linters, for create best code quality",
     "repository": {
         "type": "git",
         "url": "git+https://github.com/LabEG/code-style.git"
@@ -17,15 +18,15 @@
         ]
     },
     "scripts": {
-        "release": "standard-version",
+        "release": "cliff-jumper --name '@labeg/code-style' --package-path '.' --no-skip-changelog --no-skip-tag",
         "prepare": "husky install"
     },
     "dependencies": {
-        "@typescript-eslint/eslint-plugin": "^7.8.0",
-        "@typescript-eslint/parser": "^7.8.0",
-        "eslint": "^9.2.0",
+        "@typescript-eslint/eslint-plugin": "^7.11.0",
+        "@typescript-eslint/parser": "^7.11.0",
+        "eslint": "^9.4.0",
         "eslint-plugin-jsx-a11y": "^6.8.0",
-        "eslint-plugin-react": "^7.34.1",
+        "eslint-plugin-react": "^7.34.2",
         "eslint-plugin-react-hooks": "^4.6.2",
         "@stylistic/eslint-plugin": "^2.1.0",
         "@stylistic/eslint-plugin-migrate": "^2.1.0"
@@ -34,7 +35,12 @@
         "@commitlint/cli": "^19.3.0",
         "@commitlint/config-conventional": "^19.2.2",
         "husky": "^9.0.11",
-        "lint-staged": "^15.2.2",
-        "standard-version": "^9.5.0"
-    }
+        "lint-staged": "^15.2.5",
+        "@favware/cliff-jumper": "^3.0.3"
+    },
+    "keywords": [
+        "code style",
+        "linters",
+        "eslint"
+    ]
 }
