--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "eslint": "^9.17.0",
         "eslint-plugin-jsx-a11y": "^6.10.2",
         "eslint-plugin-react": "^7.37.3",
+        "eslint-plugin-react-hooks": "^5.1.0",
         "typescript-eslint": "^8.18.2"
     },
     "devDependencies": {
