--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "eslint-plugin-jsx-a11y": "^6.10.2",
         "eslint-plugin-react": "^7.37.3",
         "eslint-plugin-react-hooks": "^5.1.0",
+        "globals": "^15.14.0",
         "typescript-eslint": "^8.18.2"
     },
     "devDependencies": {
