--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -23,17 +23,31 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Build and publish package
-        uses: actions/setup-node@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: 22
+          node-version: 'latest'
           registry-url: https://registry.npmjs.org/
+          cache: 'npm'
 
-      - run: git config --global user.email "labeg@mail.ru"
-      - run: git config --global user.name "Eugene Labutin"
-      - run: npm ci --force # force because conflict typescript-eslint/parser version, check and remove later
-      - run: npm run release
-      - run: git push && git push --tags
-      - run: npm publish --access public
+      - name: Configure Git
+        run: |
+          git config --global user.email "labeg@mail.ru"
+          git config --global user.name "Eugene Labutin"
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run tests
+        run: npm run test
+
+      - name: Create release
+        run: npm run release
+
+      - name: Push changes and tags
+        run: git push && git push --tags
+
+      - name: Publish to NPM
+        run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
