--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -14,6 +14,7 @@ on:
 
 permissions:
   contents: write
+  id-token: write  # Required for npm provenance
 
 jobs:
   build:
@@ -50,6 +51,6 @@ jobs:
         run: git push && git push --tags
 
       - name: Publish to NPM
-        run: npm publish --access public
+        run: npm publish --provenance --access public
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
