--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -9,7 +9,7 @@ on:
   push:
     branches: [ master ]
   schedule:
-    - cron: '0 12 * * 1'  # Every Monday at 12:00 UTC (3 hours after Dependabot runs at 09:00)
+    - cron: '0 12 1 1,4,7,10 *'  # 1st day of Jan/Apr/Jul/Oct at 12:00 UTC (quarterly)
   workflow_dispatch:
 
 permissions:
